# news-webhook

./: .env.example  .gitignore  README.md  config.example.yaml  config.yaml  pyproject.toml
.github/workflows/: digest.yml
src/news_webhook/: config.py  discord.py  run.py  scheduler.py  state.py
src/news_webhook/llm/: anthropic.py  base.py  gemini.py  groq.py  openai.py
src/news_webhook/sources/: base.py  enrich.py  pubmed.py  rss.py
state/: seen.json
