[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "news-webhook"
version = "0.1.0"
description = "Scrape news (PubMed, RSS), summarize with an LLM, post to Discord"
requires-python = ">=3.10"
dependencies = [
    "feedparser>=6.0",
    "requests>=2.31",
    "pyyaml>=6.0",
    "pydantic>=2.5",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
gemini = ["google-genai>=0.3"]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.40"]
groq = ["groq>=0.10"]
all = [
    "google-genai>=0.3",
    "anthropic>=0.40",
    "openai>=1.40",
    "groq>=0.10",
]

[project.scripts]
news-webhook = "news_webhook.run:main"

[tool.setuptools.packages.find]
where = ["src"]
